--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap");
 
 :root {
+  --white: #fff;
   --black: #000000;
   --lightblue: #252432;
   --darkblue: #252432;
@@ -20,3 +21,57 @@ body {
   font-weight: 400;
   color: var(--lightblue);
 }
+
+/*header start*/
+header {
+  margin-bottom: 100px;
+  background-image: url(../images/hero-bg.png);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+/*nav*/
+nav {
+  margin: 20px 9%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.logo a {
+  font-size: 34px;
+  color: var(--blue);
+  text-decoration: none;
+}
+.btn {
+  padding: 12px 35px;
+  font-family: var(--rale);
+  font-weight: 700;
+  font-size: 16px;
+  color: var(--white);
+  background-color: var(--blue);
+  border: 1px solid transparent;
+  border-radius: 10px;
+  transition: all 0.33s;
+}
+.btn:hover {
+  background-color: var(--white);
+  border: 1px solid var(--blue);
+  color: var(--blue);
+}
+
+/*banner*/
+.banner {
+  padding: 70px 0 110px;
+  width: 905px;
+  text-align: center;
+  margin: auto;
+}
+.banner_text {
+  font-family: var(--rale);
+  font-size: 65px;
+  font-weight: 700;
+  color: var(--darkblue);
+}
+
+/*header end*/
