--- a/css/style.css
+++ b/css/style.css
@@ -9,13 +9,16 @@
   --darkblue: #252432;
   --blue: #4e47ff;
 
-  --bg: #def0fc;
+  --bg: #e5f4ff;
+  --bg-secondary: rgb(88, 71, 255, 0.1);
 
   --rale: "Raleway", sans-serif;
   --int: "Inter", sans-serif;
 }
 /*common css*/
 body {
+  margin: 0;
+  padding: 0;
   font-family: var(--int);
   font-size: 16px;
   font-weight: 400;
@@ -24,7 +27,6 @@ body {
 
 /*header start*/
 header {
-  margin-bottom: 100px;
   background-image: url(../images/hero-bg.png);
   background-position: center;
   background-repeat: no-repeat;
@@ -33,7 +35,8 @@ header {
 
 /*nav*/
 nav {
-  margin: 20px 9%;
+  margin: 0 9%;
+  padding-top: 15px;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -75,3 +78,63 @@ nav {
 }
 
 /*header end*/
+/*main start*/
+main {
+}
+/*action */
+.action {
+  margin: 0 9% 100px;
+  padding: 50px 0;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.action_content {
+  width: 517px;
+}
+.action_title {
+  font-family: var(--rale);
+  font-size: 42px;
+  font-weight: 700;
+  color: var(--darkblue);
+}
+.action_text {
+  margin: 20px 0;
+  font-size: 24px;
+  line-height: 30px;
+}
+.action_img {
+  width: 403px;
+}
+.action_img img {
+  width: 100%;
+  border-radius: 48px;
+  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
+}
+
+/*join */
+.join {
+  margin: 0 9% 100px;
+  padding: 50px 80px;
+  background-color: var(--bg-secondary);
+  text-align: center;
+  border-radius: 24px;
+}
+.join_content {
+  margin-top: 40px;
+  display: flex;
+  justify-content: space-around;
+}
+.join_item {
+}
+.join_text {
+  margin: 0;
+  font-size: 80px;
+  font-weight: 700;
+  color: var(--blue);
+}
+.join_info {
+  margin: 10px 0;
+  font-size: 20px;
+}
+/*main end*/
