--- a/css/style.css
+++ b/css/style.css
@@ -148,8 +148,8 @@ nav {
 .reviews {
   margin-top: 50px;
   display: flex;
-  justify-content: space-between;
   text-align: left;
+  justify-content: space-between;
   gap: 40px;
 }
 .review_item {
@@ -224,7 +224,7 @@ nav {
   padding: 71px 0;
   display: flex;
   justify-content: space-between;
-  align-items: centre;
+  align-items: center;
 }
 .contact_text {
   font-family: var(--rale);
@@ -263,7 +263,7 @@ nav {
 /*footer start*/
 footer {
   padding: 80px 0 50px;
-  text-align: centre;
+  text-align: center;
 }
 .footer_content {
   width: 531px;
